--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: 四叠半山｜战战栗栗，日谨一日
 author:
-  name: leigitwing
+  name: leigitwing/riri
   email: claraligz@gmail.com
 description: > # this means to ignore newlines until "show_excerpts:"
-  战战栗栗，日谨一日
+  
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
